disabled editor works again

--- a/app/styles/play/level/tome/problem_alert.sass
+++ b/app/styles/play/level/tome/problem_alert.sass
@@ -8,7 +8,7 @@
   right: 10px
   background: transparent
   border: 0
-  padding: 18px 35px 18px 14px
+  padding: 7px 20px
   text-shadow: none
   color: white
   word-wrap: break-word
@@ -46,7 +46,8 @@ html.no-borderimage
     border-image: none
     background: transparent url(/images/level/code_editor_error_background.png) no-repeat
     background-size: 100% 100%
-  
+    padding: 18px 35px 18px 14px
+
     &.alert-warning
       background-image: url(/images/level/code_editor_warning_background.png)
       
