--- a/app/templates/play/level/tome/spell_list_tab_entry.jade
+++ b/app/templates/play/level/tome/spell_list_tab_entry.jade
@@ -1,3 +1,5 @@
+img(src="/images/level/code_editor_tab_background.png").spell-tab-image-hidden.hidden
+
 .btn.btn-small.spell-list-button(title="See all spells you can edit")
   i.icon-chevron-down
 .thang-avatar-placeholder
