--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -76,3 +76,11 @@ html.no-borderimage
       background: transparent url(/images/level/popover_background.png)
       background-size: 100% 100%
       border: 0
+
+#code-area.fullscreen-editor
+  #tome-view
+    .popover.pinned
+      min-width: 600px
+      bottom: inherit
+      right: 50%
+      margin-right: -300px
