--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -194,7 +194,9 @@ block content
                           span.spl - #{session.team}
                       if session.codeLanguage != 'javascript'
                         span.spl - #{{coffeescript: 'CoffeeScript', python: 'Python', lua: 'Lua', io: 'Io', clojure: 'Clojure'}[session.codeLanguage]}
-  
+              if !editing && !sessions.length
+                h3(data-i18n="account_profile.player_code") Player Code
+                p This player hasn't submitted code to our more recent tournaments.
           .middle-column.full-height-column
             .sub-column
               #name-container.editable-section
