--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -34,7 +34,7 @@ block header
             if patches && patches.length
               span.badge= patches.length
         li
-          a(href="#docs-component-view", data-toggle="tab", data-i18n="editor.docs-component-view") Documentation
+          a(href="#docs-components-view", data-toggle="tab", data-i18n="editor.level_tab_docs") Documentation
       .navbar-header
         span.navbar-brand #{level.attributes.name}
 
@@ -115,7 +115,7 @@ block outer_content
       div.tab-pane#editor-level-patches
         .patches-view
 
-      div.tab-pane#docs-component-view
+      div.tab-pane#docs-components-view
 
     div#error-view
 
