Adds preset images to preview the generated terrain

--- a/app/templates/editor/level/modal/terrain_randomize.jade
+++ b/app/templates/editor/level/modal/terrain_randomize.jade
@@ -6,7 +6,7 @@ block modal-header-content
 block modal-body-content
   div#normal-view
     a(href="#")
-        div.choose-option(data-preset-type="grassy", data-preset-size="small")
+        div.choose-option(data-preset-type="grassy", data-preset-size="small", style="background:url(/images/pages/editor/level/preset_grassy_small.jpg) no-repeat center; background-size: cover")
           div.preset-size.name-label
             span(data-i18n="editor.small") Small
           div.preset-name
