Updates glyphicons for undo-redo, adds placeholder text for add thangs search

--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -151,6 +151,8 @@ $mobile: 1050px
     input
       width: $addPaletteWidth
       margin: 0
+      margin-top: 5px
+      padding-left: 5px
       @media screen and (max-width: $mobile)
         margin: 0 5px
 
