--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -39,11 +39,11 @@ block header
 
       ul.nav.navbar-nav.navbar-right
         li#undo-button(title="Undo (Ctrl+Z)")
-            a
-              span.glyphicon-floppy-disk.glyphicon
+          a
+            span.glyphicon-arrow-left.glyphicon
         li#redo-button(title="Redo (Ctrl+Shift+Z)")
             a
-              span.glyphicon-floppy-disk.glyphicon
+              span.glyphicon-repeat.glyphicon
         if authorized
           li#commit-level-start-button
             a
