--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -210,6 +210,21 @@ $mobile: 1050px
     #canvas-wrapper
       width: 100%
       position: relative
+
+      #canvas-overlay
+        position: absolute
+        width: 100%
+        height: 100%
+        background: white
+        opacity: 0.5
+        text-align: center
+
+        #randomize-button
+          position: absolute
+          top: 45%
+          height: 40px
+
+
   
     // Below snatched from play/level.sass; should refactor?
   
