--- a/app/templates/achievement_notify.jade
+++ b/app/templates/achievement_notify.jade
@@ -1,6 +1,6 @@
 div
   .clearfix.achievement-body
-    .achievement-icon.achievement-border-silver(class=locked === true ? "locked" : "")
+    .achievement-icon(class=locked === true ? "locked" : "", class=border)
       .achievement-image(data-notify-html="image")
         if imgURL
           img(src=imgURL)
