Greatly redid achievement styling for various scenarios

--- a/app/templates/achievement_notify.jade
+++ b/app/templates/achievement_notify.jade
@@ -9,11 +9,10 @@ div
       p.achievement-description(data-notify-html="description") #{description}
 
       if popup
-        .achievement-progress
-          .achievement-message(data-notify-html="message")
-          .progress-wrapper
-            //.earned-exp(data-notify-html="earnedExp")
-            span.achievement-level.badge(data-notify-html="level")
-            .progress-bar-wrapper(data-notify-html="progressBar")
-            .progress-bar-border(data-notify-html="barBorder")
-              //img(src='/images/achievements/bar_border.png' width='100%')
+        .progress-wrapper
+          //.earned-exp(data-notify-html="earnedExp")
+          span.achievement-level.badge(data-notify-html="level")
+          .progress-bar-wrapper(data-notify-html="progressBar")
+          .progress-bar-border
+            //(data-notify-html="barBorder")
+            //img(src='/images/achievements/bar_border.png' width='100%')
