--- a/app/styles/achievements.sass
+++ b/app/styles/achievements.sass
@@ -25,11 +25,11 @@
     text-align: center
     overflow: hidden
 
-    .achievement-title
+    > .achievement-title
       font-family: Bangers
       overflow: hidden
 
-    .achievement-description
+    > .achievement-description
       white-space: initial
       font-size: 12px
       line-height: 1.3em
@@ -37,6 +37,7 @@
       max-height: 2.6em
       margin-top: auto
       margin-bottom: 0px !important
+      padding-left: 8px
 
 #user-achievements-view
   .row
@@ -78,9 +79,11 @@
 .notifyjs-achievement-wood-base, .notifyjs-achievement-stone-base, .notifyjs-achievement-silver-base,
 .notifyjs-achievement-gold-base, .notifyjs-achievement-diamond-base
   padding: 20px 0px
+  cursor: default
 
   .achievement-body
     .achievement-icon
+      z-index: 1000
       width: 200px
       height: 200px
       left: -140px
@@ -96,6 +99,7 @@
           bottom: 0
 
     .achievement-content
+      position: relative
       width: 450px
       height: 160px
       padding: 24px 30px 20px 60px
@@ -111,37 +115,38 @@
         margin-top: auto
         margin-bottom: 0px !important
 
-      .achievement-progress
-        padding: 8px 0px 0px 0px
+      .progress-wrapper
+        margin-left: 20px
+        position: absolute
+        bottom: 48px
 
-        .achievement-message
-          font-family: Bangers
-          font-size: 18px
-          &:empty
-            display: none
-
-        .progress-wrapper
+        .achievement-level
+          font-size: 20px
+          z-index: 1000
           position: absolute
-          padding-right: 30px
-          bottom: 0px
+          left: -15px
+          margin-top: -3px
+          box-shadow: 0 0 0 2px black, 0 0 0 3px lightgrey, 0 0 0 5px black
 
-          .achievement-level
-            float: left
-            font-size: 15px
+        > .progress-bar-wrapper
+          position: absolute
+          width: 331px
+          height: 20px
+          z-index: 2
 
-          .progress-bar-wrapper
-            padding-left: 30px
-            width: 100%
-            .progress
-              border-radius: 20px
+          > .progress
+            margin-top: 5px
+            border-radius: 50px
+            height: 14px
 
-          .progress-bar-border
-            padding-left: 30px
-            position: relative
-            top: -44px
-
-          .progress-bar-border img
-            width: 100%
+        > .progress-bar-border
+          position: absolute
+          width: 340px
+          height: 30px
+          margin-top: -2px
+          background: url("/images/achievements/bar_border.png") no-repeat
+          background-size: 100% 100%
+          z-index: 1
 
 .notifyjs-achievement-wood-base
   .achievement-icon
@@ -168,5 +173,11 @@
     background: url("/images/achievements/border_diamond.png") no-repeat
     background-size: 100% 100%
 
-.progress-bar-white
-  background-color: white
+.exp-bar-accumulated
+  background-color: #680080
+
+.exp-bar-new
+  background-color: #0096ff
+
+.exp-bar-left
+  background-color: #fffbfd
