Did a bunch related to achievements and user profile page

--- a/app/styles/achievements.sass
+++ b/app/styles/achievements.sass
@@ -120,13 +120,12 @@
         position: absolute
         bottom: 48px
 
-        .achievement-level
+        .user-level
           font-size: 20px
-          z-index: 1000
           position: absolute
           left: -15px
           margin-top: -3px
-          box-shadow: 0 0 0 2px black, 0 0 0 3px lightgrey, 0 0 0 5px black
+          box-shadow: 0 0 0 2px black, 0 0 0 4px lightgrey, 0 0 0 6px black
 
         > .progress-bar-wrapper
           position: absolute
@@ -181,3 +180,8 @@
 
 .exp-bar-left
   background-color: #fffbfd
+
+.user-level
+  z-index: 1000
+  box-shadow: 0 0 0 1px black, 0 0 0 3px lightgrey, 0 0 0 4px black
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
