--- a/app/templates/achievement_notify.jade
+++ b/app/templates/achievement_notify.jade
@@ -10,9 +10,6 @@ div
 
       if popup
         .progress-wrapper
-          //.earned-exp(data-notify-html="earnedExp")
-          span.achievement-level.badge(data-notify-html="level")
+          span.user-level.badge(data-notify-html="level")
           .progress-bar-wrapper(data-notify-html="progressBar")
           .progress-bar-border
-            //(data-notify-html="barBorder")
-            //img(src='/images/achievements/bar_border.png' width='100%')
