--- a/app/styles/user/home.sass
+++ b/app/styles/user/home.sass
@@ -18,7 +18,7 @@
 
     > .picture
       width: 100%
-      background-color: #dadada
+      background-color: #ffe4bc
       border: 4px solid white
 
     > .name
