Implemented singleplayer and multiplayer games played on profile

--- a/app/styles/user/home.sass
+++ b/app/styles/user/home.sass
@@ -21,10 +21,17 @@
       background-color: #ffe4bc
       border: 4px solid white
 
-    > .name
+    > .profile-info
+      background: white
+
+      .extra-info
+        padding-bottom: 3px
+        &:empty
+          display: none
+
+    .name
       margin: 0px auto
       padding: 10px inherit
-      background: white
       color: white
       text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000
 
