--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -288,3 +288,9 @@ body[lang='ja']
 
 a[data-toggle="coco-modal"]
   cursor: pointer
+
+.achievement-corner
+  position: fixed
+  bottom: 0px
+  right: 0px
+  z-index: 1001
