--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -73,6 +73,7 @@ body
           .main-content-area
             block content
               p If this is showing, you dun goofed
+    .achievement-corner
 
   block footer
     .footer.clearfix
