Styles add button for addComponentsTreema

--- a/app/styles/editor/components/main.sass
+++ b/app/styles/editor/components/main.sass
@@ -40,6 +40,9 @@
       right: 0px
       bottom: 0
       overflow: scroll
+
+      .treema-row .add-button
+        margin-left: 10px 
         
   #component-config-column-view
     border-left: 1px solid black
