--- a/app/templates/user/achievements.jade
+++ b/app/templates/user/achievements.jade
@@ -13,9 +13,14 @@ block append content
             each achievement, index in achievements
               - var title = achievement.get('name');
               - var description = achievement.get('description');
-              - var imgURL = achievement.getImageURL();
               - var locked = ! achievement.get('unlocked');
               - var notifyClass = achievement.getNotifyStyle()
+              - var imgURL = achievement.getImageURL();
+              if locked
+                - var imgURL = achievement.getLockedImageURL();
+              else
+                - var imgURL = achievement.getImageURL();
+              - console.log(locked);
               .col-lg-4.col-xs-12
                 include ../achievement_notify
     else if activeLayout === 'table'
