--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -34,6 +34,8 @@ block header
             if patches && patches.length
               span.badge= patches.length
         li
+          a(href="#related-achievements-view", data-toggle="tab") Achievements
+        li
           a(href="#docs-components-view", data-toggle="tab", data-i18n="editor.level_tab_docs") Documentation
       .navbar-header
         span.navbar-brand #{level.attributes.name}
@@ -120,6 +122,8 @@ block outer_content
     
       div.tab-pane#editor-level-patches
         .patches-view
+
+      div.tab-pane#related-achievements-view
 
       div.tab-pane#docs-components-view
 
