--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -212,6 +212,7 @@ $mobile: 1050px
       position: relative
 
       #canvas-overlay
+        display: none
         position: absolute
         width: 100%
         height: 100%
